--- a/style.css
+++ b/style.css
@@ -12,10 +12,7 @@ body {
 }
 
 main {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin-top: 40px;
     text-align: center;
 
 }
